--- a/about.html
+++ b/about.html
@@ -78,10 +78,10 @@
        </ul>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">שאלות נפוצות</a>
+        <a class="nav-link" href="faqPage.html">שאלות נפוצות</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">מפת אתר</a>
+        <a class="nav-link" href="sitemap.html">מפת אתר</a>
       </li>
    </ul>
     <form class="form-inline mb-2 mb-md-0 d-flex">
@@ -99,36 +99,37 @@
 <!--תפריט ניווט סוף-->
 
 
+
 <header>
-<div class="header">
-  <div class="headerinpage">
-  <div class="container-xxl py-5 hero-header">
-    <!--פירורי לחם-->
-    <div class="pt-3">
-    <nav aria-label="breadcrumb ">
-      <ol class="breadcrumb justify-content-start">
-        <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
-        <li class="breadcrumb-item" aria-current="page">אודות</li>
-       </ol>
-       </nav> 
-      </div>
-        <!--סוף פירורי לחם-->
-        <div class="container my-lg-5 py-5 px-lg-5">
+  <div class="header">
+    <div class="headerinpage">
+    <div class="container-xxl py-lg-5 hero-header">
+      <!--פירורי לחם-->
+      <div class="pt-3">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb justify-content-start">
+          <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
+          <li class="breadcrumb-item" aria-current="page">אודות</li>
+         </ol>
+         </nav> 
+        </div>
+          <!--סוף פירורי לחם-->
+     <div class="container my-lg-5 py-5 px-lg-5">
           <div class="row g-5 py-lg-5">
             <div class="container">  
               <div class="section-title position-relative text-start mb-5 pb-2">
-              <h1 >אודות</h1>                
+                <h2 >אודות</h2>                
+            </div>
           </div>
-        </div>
-     </div>
-     </div>
+       </div>
+       </div>
+      </div>
     </div>
-  </div>
-   </div>
-   </header>    
-   <Main>
+     </div>
+     </header>      
+   <main>
       
-</Main>
+</main>
 
   
 <footer class="footer rtl-footer-bg py-3 d-flex">
@@ -147,7 +148,7 @@
         </ul>
       </div>
       </div>
-      <a class="text-black text-center"  href="faq.html">שאלות נפוצות</a>
+      <a class="text-black text-center"  href="faqPage.html">שאלות נפוצות</a>
       <a class="text-black text-center" href="sitemap.html">מפת אתר</a>
       <div class="text-center mt-3">
         <a class="text-black">צור קשר</a>
