--- a/searchingArticles.html
+++ b/searchingArticles.html
@@ -77,10 +77,10 @@
        </ul>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">שאלות נפוצות</a>
+        <a class="nav-link" href="faqPage.html">שאלות נפוצות</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">מפת אתר</a>
+        <a class="nav-link" href="sitemap.html">מפת אתר</a>
       </li>
    </ul>
     <form class="form-inline mb-2 mb-md-0 d-flex">
@@ -192,7 +192,7 @@
         </ul>
       </div>
       </div>
-      <a class="text-black text-center"  href="faq.html">שאלות נפוצות</a>
+      <a class="text-black text-center"  href="faqPage.html">שאלות נפוצות</a>
       <a class="text-black text-center" href="sitemap.html">מפת אתר</a>
       <div class="text-center mt-3">
         <a class="text-black">צור קשר</a>
