--- a/sitemap.html
+++ b/sitemap.html
@@ -96,80 +96,55 @@
 </nav>
 
 
-
 <!--תפריט ניווט סוף-->
 
 
+
 <header>
-<div class="header">
-  <div class="headerinpage">
-  <div class="container-xxl py-5 hero-header">
-    <!--פירורי לחם-->
-    <div class="pt-3">
-    <nav aria-label="breadcrumb ">
-      <ol class="breadcrumb justify-content-start">
-        <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
-        <li class="breadcrumb-item" aria-current="page">רשימה ביבליוגרפית</li>
-       </ol>
-       </nav> 
-    </div>
-        <!--סוף פירורי לחם-->
-        <div class="container my-lg-5 py-5 px-lg-5">
+  <div class="header">
+    <div class="headerinpage">
+    <div class="container-xxl py-lg-5 hero-header">
+      <!--פירורי לחם-->
+      <div class="pt-3">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb justify-content-start">
+          <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
+          <li class="breadcrumb-item" aria-current="page">מפת אתר</li>
+         </ol>
+         </nav> 
+        </div>
+          <!--סוף פירורי לחם-->
+     <div class="container my-lg-5 py-5 px-lg-5">
           <div class="row g-5 py-lg-5">
             <div class="container">  
               <div class="section-title position-relative text-start mb-5 pb-2">
-              <h2>רשימה ביבליוגרפית</h2>                
+                <h2 >מפת אתר</h2>                
+            </div>
           </div>
-        </div>
-     </div>
-     </div>
+       </div>
+       </div>
+      </div>
     </div>
-  </div>
-   </div>
-   </header>   
-   
-   
+     </div>
+     </header>      
    <main>
-    <div class="position-relative">
-    <img src="images/Group 38.png" class="background-image">
-    <div class="container p-4 myCardsContainer">
-      <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5>
-    <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
-      <div class="col pb-4">
-        <div class="card cardInnerPage">
-          <img src="/images/Group 99.png" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" >
-            <h5 class="card-title">כללי ציטוט</h5>
-            <p class="card-text">הרחבה על כתיבת כללי ציטוט ברשימה הביבליוגרפית</p>
-          </div>
-          <div class="p-3">
-            <span class="badge badge-pill badge-light w-auto">מסמך מסכם</span>
-            <span class="badge badge-pill badge-light w-auto"> 
-              3 דקות</span> 
-          </div>
-        </div>
-      </div>
-      <div class="col pb-4">
-        <div class="card cardInnerPage">
-          <img src="/images/Group 100.png" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" >
-            <h5 class="card-title">שימוש בכלים טכנולוגיים</h5>
-            <p class="card-text">יצירת רשימה ביביליוגרפית בקלות וביעילות באמצעות כלים טכנולוגיים יעודיים</p>
-          </div>
-          <div class="p-3">
-            <span class="badge badge-pill badge-light w-auto">סרטון הדרכה</span>
-            <span class="badge badge-pill badge-light w-auto"> 
-              3 דקות</span> 
-          </div>
-      </div>
-      </div>
-    </div>
-    </div>
-    </div>
+    <div class="container" style="margin-top: -80px;">
+      <div class="text-lg-start">
+        <h5 class="pb-3"><a href="about.html">אודות</a></h5>
+        <h5>תכני לימוד</h5>
+        <ul class="list-unstyled pb-1">
+          <li><a href="startpage.html">איך מתחילים?</a></li>
+          <li><a href="resourcesTypes.html">סוגי מקורות אקדמיים</a></li>
+          <li><a href="dataBases.html">מאגרי מידע</a></li>
+          <li><a href="searchingArticles.html">חיפוש מאמרים</a></li>
+          <li><a href="bibList.html">רשימה ביבליוגרפית</a></li>
+        </ul>
+        <h5><a href="faqPage.html">שאלות נפוצות</a></h5>
+
+  </div>
 </main>
 
   
-
 <footer class="footer rtl-footer-bg py-3 d-flex">
   <div class="container">
     <div class="footerText d-flex flex-column flex-md-row justify-content-md-between">
