--- a/faqPage.html
+++ b/faqPage.html
@@ -14,6 +14,7 @@
     <!-- CSS -->
     <link href="styles/bootstrap.rtl.min.css" rel="stylesheet" />
     <link href="styles/myStyle.css" rel="stylesheet" />
+
   <!-- Icon Font Stylesheet -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
@@ -109,7 +110,7 @@
     <nav aria-label="breadcrumb ">
       <ol class="breadcrumb justify-content-start">
         <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
-        <li class="breadcrumb-item" aria-current="page">רשימה ביבליוגרפית</li>
+        <li class="breadcrumb-item" aria-current="page">שאלות נפוצות</li>
        </ol>
        </nav> 
     </div>
@@ -118,7 +119,7 @@
           <div class="row g-5 py-lg-5">
             <div class="container">  
               <div class="section-title position-relative text-start mb-5 pb-2">
-              <h2>רשימה ביבליוגרפית</h2>                
+              <h2>שאלות נפוצות</h2>                
           </div>
         </div>
      </div>
@@ -127,46 +128,74 @@
   </div>
    </div>
    </header>   
-   
-   
+
    <main>
-    <div class="position-relative">
-    <img src="images/Group 38.png" class="background-image">
-    <div class="container p-4 myCardsContainer">
-      <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5>
-    <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
-      <div class="col pb-4">
-        <div class="card cardInnerPage">
-          <img src="/images/Group 99.png" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" >
-            <h5 class="card-title">כללי ציטוט</h5>
-            <p class="card-text">הרחבה על כתיבת כללי ציטוט ברשימה הביבליוגרפית</p>
-          </div>
-          <div class="p-3">
-            <span class="badge badge-pill badge-light w-auto">מסמך מסכם</span>
-            <span class="badge badge-pill badge-light w-auto"> 
-              3 דקות</span> 
-          </div>
+    <div class="container" style=" margin-top: -80px;">
+    <div class="accordion accordion-flush" id="accordionFlushExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingOne">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+איך מתחילים לחפש מאמרים באופן יעיל?
+          </button>
+        </h2>
+        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
         </div>
       </div>
-      <div class="col pb-4">
-        <div class="card cardInnerPage">
-          <img src="/images/Group 100.png" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" >
-            <h5 class="card-title">שימוש בכלים טכנולוגיים</h5>
-            <p class="card-text">יצירת רשימה ביביליוגרפית בקלות וביעילות באמצעות כלים טכנולוגיים יעודיים</p>
-          </div>
-          <div class="p-3">
-            <span class="badge badge-pill badge-light w-auto">סרטון הדרכה</span>
-            <span class="badge badge-pill badge-light w-auto"> 
-              3 דקות</span> 
-          </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+איך מתחברים למאגר מידע כסטודנט של המכון הטכנולוגי בחולון HIT?
+          </button>
+        </h2>
+        <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+        </div>
       </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+באילו מאגרי מידע כדאי לי לחפש מאמרים?
+          </button>
+        </h2>
+        <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-heading4">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse4" aria-expanded="false" aria-controls="flush-collapseThree">
+איך יוצרים רשימה ביבליוגרפית בקלות?
+          </button>
+        </h2>
+        <div id="flush-collapse4" class="accordion-collapse collapse" aria-labelledby="flush-heading4" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-heading5">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse5" aria-expanded="false" aria-controls="flush-collapseThree">
+התחלתי לחפש מאמרים במאגר מידע מסוים והמאמר בתשלום, מה עלי לעשות?
+          </button>
+        </h2>
+        <div id="flush-collapse5" class="accordion-collapse collapse" aria-labelledby="flush-heading5" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-heading6">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse6" aria-expanded="false" aria-controls="flush-collapseThree">
+            איך יודעים שהמאמר שמצאתי הוא אקדמי / עבר ביקורת עמיתים?
+          </button>
+        </h2>
+        <div id="flush-collapse6" class="accordion-collapse collapse" aria-labelledby="flush-heading6" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+        </div>
       </div>
     </div>
-    </div>
-    </div>
-</main>
+  </div>
+   </main>
+
 
   
 
