--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <!-- CSS -->
     <link href="styles/bootstrap.rtl.min.css" rel="stylesheet" />
     <link href="styles/myStyle.css" rel="stylesheet" />
-    
+     <!--פונט רוביק-->
+
   <!-- Icon Font Stylesheet -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
@@ -79,10 +80,10 @@
        </ul>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">שאלות נפוצות</a>
+        <a class="nav-link" href="faqPage.html">שאלות נפוצות</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">מפת אתר</a>
+        <a class="nav-link" href="sitemap.html">מפת אתר</a>
       </li>
    </ul>
     <form class="form-inline mb-2 mb-md-0 d-flex">
@@ -117,7 +118,6 @@
     </div>
   </div>
 </header>
-
 
   <main>
     <div class="container">
@@ -212,7 +212,7 @@
         </ul>
       </div>
       </div>
-      <a class="text-black text-center"  href="faq.html">שאלות נפוצות</a>
+      <a class="text-black text-center"  href="faqPage.html">שאלות נפוצות</a>
       <a class="text-black text-center" href="sitemap.html">מפת אתר</a>
       <div class="text-center mt-3">
         <a class="text-black">צור קשר</a>
