--- a/resourcesTypes.html
+++ b/resourcesTypes.html
@@ -78,7 +78,7 @@
        </ul>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">שאלות נפוצות</a>
+        <a class="nav-link" href="faqPage.html">שאלות נפוצות</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">מפת אתר</a>
@@ -180,7 +180,7 @@
     </div>
     </div> 
     </div>
-  </Main>
+  </main>
   
   
 
@@ -201,7 +201,7 @@
           </ul>
         </div>
         </div>
-        <a class="text-black text-center"  href="faq.html">שאלות נפוצות</a>
+        <a class="text-black text-center"  href="faqPage.html">שאלות נפוצות</a>
         <a class="text-black text-center" href="sitemap.html">מפת אתר</a>
         <div class="text-center mt-3">
           <a class="text-black">צור קשר</a>
