--- a/boolean/goodbye.html
+++ b/boolean/goodbye.html
@@ -1,6 +1,7 @@
-<html>
+<html lang="he" class="" dir="rtl">
   <head>
-    <meta charset="utf-8" lang="en">
+
+    <meta charset="utf-8" lang="he">
     <style>
       html {
         font-size: 20px;
