--- a/dataBases.html
+++ b/dataBases.html
@@ -142,26 +142,12 @@
           <img src="/images/Group 89.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
             <h5 class="card-title">מהו מאגר מידע?</h5>
-            <p class="card-text">הסבר על מאגרי מידע ומאפיינים</p>
+            <p class="card-text">הסבר על מאגרי מידע, המאפיינים העיקריים של המאגרים ואופן הגישה אליהם</p>
           </div>
           <div class="p-3">
             <span class="badge badge-pill badge-light w-auto">לומדה</span>
             <span class="badge badge-pill badge-light w-auto"> 
               3 דקות</span> 
-          </div>
-        </div>
-      </div>
-      <div class="col pb-4">
-        <div class="card cardInnerPage">
-          <img src="/images/Group 90.png" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">מאגרי מידע על פי תחומי דעת</h5>
-            <p class="card-text">טבלה המסדרת את מאגרי המידע הנפוצים לפי אשכולות לימוד</p>
-          </div>
-          <div class="p-3">
-            <span class="badge badge-pill badge-light w-auto">טבלה</span>
-            <span class="badge badge-pill badge-light w-auto"> 
-              2 דקות</span> 
           </div>
         </div>
       </div>
