--- a/searchingArticles.html
+++ b/searchingArticles.html
@@ -136,8 +136,9 @@
           <img src="/images/Group 92.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">חיפוש מתקדם במאגרי מידע</h5>
-            <p class="card-text overflow-hidden" style="height: 50px;">
-              הסבר על הגדרות נפוצות של חיפוש מתקדם לביצוע סינון יעיל של תוצאות החיפוש במאגר המידע            </p>
+            <p class="card-text">
+              הסבר על הגדרות נפוצות של חיפוש מתקדם לביצוע סינון יעיל 
+              של תוצאות החיפוש במאגר המידע  </p>
        </div>
           <div class="p-3">
             <span class="badge badge-pill badge-light w-auto">סרטון</span>
@@ -150,7 +151,7 @@
           <img src="/images/Group 93.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
             <h5 class="card-title">אופרטורים בוליאניים</h5>
-            <p class="card-text">הסבר על אופן השימוש באופרטורים AND, OR, NOT לייעול החיפוש</p>
+            <p class="card-text">הסבר על אופן השימוש באופרטורים AND, OR, NOT לייעול החיפוש </p>
           </div>
           <div class="p-3">
             <span class="badge badge-pill badge-light w-auto">לומדה</span>
@@ -161,7 +162,7 @@
       <div class="col pb-4">
         <div class="card cardInnerPage"  id="toEnglishSearchRise">
           <img src="/images/Group 95.png" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" style="min-height: 110px;">
+          <div class="card-body d-flex flex-column">
             <h5 class="card-title">חיפוש בשפה האנגלית</h5>
             <p class="card-text">שימוש נכון במילות מפתח בשפה האנגלית ובכלים טכנולוגיים המסייעים בהרחבת מילות החיפוש עתיד לקצר את תהליך החיפוש באופן משמעותי</div>
           <div class="p-3">
