--- a/testpage.html
+++ b/testpage.html
@@ -8,8 +8,8 @@
     <meta name="keywords" content="טכנולוגיות למידה, הדרכות " />
     <meta name="author" content="קורל ששון ודולב קליינר " />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image" href="/images/Logo 3.png">
-
+ <!--לוגו עמוד-->
+ <link rel="icon" type="image/png" href="/images/Logo 3.png">
 
     <!-- CSS -->
     <link href="styles/bootstrap.rtl.min.css" rel="stylesheet" />
@@ -66,7 +66,7 @@
             <ul class="submenu dropdown-menu">
               <li><a class="dropdown-item" href="#">חיפוש מתקדם</a></li>
               <li><a class="dropdown-item" href="#">לוגיקה בוליאנית</a></li>
-              <li><a class="dropdown-item" href="#">חיפוש יעיל באנגלית</a> </li>
+              <li><a class="dropdown-item" href="testpage.html">חיפוש יעיל באנגלית</a> </li>
             </ul>
           </li>
           <li> <a href="bibList.html" class="dropdown-item">רשימה ביבליוגרפית&raquo; </a>
@@ -96,112 +96,16 @@
 </nav>
 
 
-
-
 <!--תפריט ניווט סוף-->
-
-
-<header>
-<div class="header">
-  <div class="headerinpage">
-    <div class="container-xxl py-5 hero-header">
-      <!--פירורי לחם-->
-    <div class="p-3">
-    <nav aria-label="breadcrumb">
-      <ol class="breadcrumb justify-content-start">
-        <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
-        <li class="breadcrumb-item" aria-current="page">איך מתחילים</li>
-       </ol>
-       </nav> 
-      </div>
-        <!--סוף פירורי לחם-->
-        <div class="container my-lg-5 py-5 px-lg-5">
-          <div class="row g-5 py-lg-5">
-          <div class="container">  
-            <div class="section-title position-relative text-start mb-5 pb-2">
-              <h2 >איך מתחילים לחפש?</h2>                
-          </div>
-        </div>
-     </div>
-     </div>
-    </div>
-  </div>
-   </div>
-   </header>    
-
+   
    <main>
-    <div class="position-relative">
-    <img src="images/Vector4.png" class="background-image">
-    <div class="container p-4 myCardsContainer">
-    <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5>
-    <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
-      <div class="col pb-4">
-        <div class="card cardInnerPage">
-          <img src="/images/Group 84.png" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" >
-            <h5 class="card-title">אתר הספרייה</h5>
-            <p class="card-text">היכרות בסיסית עם הפורטל והסבר על אופן ההתחברות מעמדת המידע</p>
-          </div>
-          <div class="p-3">
-            <span class="badge badge-pill badge-light w-auto">סרטון</span>
-            <span class="badge badge-pill badge-light w-auto"> 
-              3 דקות</span> 
-          </div>
-      </div>
-      </div>
-      <div class="col pb-4">
-        <div class="card cardInnerPage">
-          <img src="/images/Group 85.png" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" >
-            <h5 class="card-title">קטלוג הספרייה</h5>
-            <p class="card-text"> קטלוג הספרייה כולל הצגת אפשרויות חיפוש בקטלוג כמו: חיפוש ספרים, מאמרים ופרויקטי גמר</div>
-          <div class="p-3">
-            <span class="badge badge-pill badge-light w-auto">סרטון</span>
-            <span class="badge badge-pill badge-light w-auto"> 
-              3 דקות</span> 
-          </div>
-        </div>
-      </div> 
-    </div>
+    <div class="container" >
+    <iframe src="englishSearch/englishSearchRise.html" width="100%" height="500"></iframe>
   </div>
-    </div>
 </main>
 
   
 
-
-<footer class="footer rtl-footer-bg py-3 d-flex">
-  <div class="container">
-    <div class="footerText d-flex flex-column flex-md-row justify-content-md-between">
-      <a class="text-black text-center" href="about.html">אודות</a>
-      <div class="col-md-1 text-center"  style="width:max-content">
-        <a class="text-black">תכנים</a>
-        <div class="text-lg-start">
-        <ul class="list-unstyled">
-          <li><a href="startpage.html">איך מתחילים?</a></li>
-          <li><a href="resourcesTypes.html">סוגי מקורות אקדמיים</a></li>
-          <li><a href="dataBases.html">מאגרי מידע</a></li>
-          <li><a href="searchingArticles.html">חיפוש מאמרים</a></li>
-          <li><a href="bibList.html">רשימה ביבליוגרפית</a></li>
-        </ul>
-      </div>
-      </div>
-      <a class="text-black text-center"  href="faqPage.html">שאלות נפוצות</a>
-      <a class="text-black text-center" href="sitemap.html">מפת אתר</a>
-      <div class="text-center mt-3">
-        <a class="text-black">צור קשר</a>
-        <p class="text-center">ניתן לפנות לצוות הספרייה במייל: Library@hit.ac.il</p>
-      </div>
-      <div class="mobileFooter text-center mt-3">
-        <p>האתר פותח במסגרת פרויקט גמר במכון הטכנולוגי בחולון
-          הפקולטה לטכנולוגיות למידה, תואר ראשון</p>
-        <a href="https://www.hit.ac.il/"><img src="images/HITlogo.png" alt="HIT Logo"></a>
-        <p>&copy; כל הזכויות שמורות למכון הטכנולוגי HIT</p>
-
-      </div>
-    </div>
-  </div>
-</footer>
 </body>
 
 </html>
