--- a/bibList.html
+++ b/bibList.html
@@ -84,14 +84,17 @@
         <a class="nav-link" href="sitemap.html">מפת אתר</a>
       </li>
    </ul>
-    <form class="form-inline mb-2 mb-md-0 d-flex">
-      <input class="form-control mr-2" type="search" placeholder="חיפוש נושא" aria-label="Search" id="search-box">
-      <button class="btn btn-outline-primary" type="submit" id="search-btn">
-        <i class="fa fa-search"></i>
-      </button>
-      <div id="search-dropdown" class="dropdown-menu m-0 position-absolute" style="display:none;margin-top:2.5rem!important;">
+   <form class="form-inline mb-2 mb-md-0 d-flex">
+    <div class="input-group">
+      <input class="form-control mr-2" type="search" placeholder="הקלידו נושא לחיפוש..." aria-label="Search" id="search-box">
+      <div class="input-group-append">
+        <button class="btn btn-outline-primary d-none" type="submit" id="search-btn">
+          <i class="fa fa-search"></i>
+        </button>
       </div>
-    </form>
+    </div>
+    <div id="search-dropdown" class="dropdown-menu m-0 position-absolute" style="display:none;margin-top:2.5rem!important;"></div>
+  </form>
   </div>
 </nav>
 
@@ -142,7 +145,7 @@
             <h5 class="card-title">כללי ציטוט</h5>
             <p class="card-text">הרחבה על כתיבת כללי ציטוט ברשימה הביבליוגרפית</p>
           </div>
-          <div class="p-3">
+          <div class="p-3 d-none d-md-block">
             <span class="badge badge-pill badge-light w-auto">מסמך מסכם</span>
             <span class="badge badge-pill badge-light w-auto"> 
               3 דקות</span> 
@@ -156,7 +159,7 @@
             <h5 class="card-title">שימוש בכלים טכנולוגיים</h5>
             <p class="card-text">יצירת רשימה ביביליוגרפית בקלות וביעילות באמצעות כלים טכנולוגיים יעודיים</p>
           </div>
-          <div class="p-3">
+          <div class="p-3 d-none d-md-block">
             <span class="badge badge-pill badge-light w-auto">סרטון הדרכה</span>
             <span class="badge badge-pill badge-light w-auto"> 
               3 דקות</span> 
