--- a/faqPage.html
+++ b/faqPage.html
@@ -85,14 +85,17 @@
         <a class="nav-link" href="sitemap.html">מפת אתר</a>
       </li>
    </ul>
-    <form class="form-inline mb-2 mb-md-0 d-flex">
-      <input class="form-control mr-2" type="search" placeholder="חיפוש נושא" aria-label="Search" id="search-box">
-      <button class="btn btn-outline-primary" type="submit" id="search-btn">
-        <i class="fa fa-search"></i>
-      </button>
-      <div id="search-dropdown" class="dropdown-menu m-0 position-absolute" style="display:none;margin-top:2.5rem!important;">
+   <form class="form-inline mb-2 mb-md-0 d-flex">
+    <div class="input-group">
+      <input class="form-control mr-2" type="search" placeholder="הקלידו נושא לחיפוש..." aria-label="Search" id="search-box">
+      <div class="input-group-append">
+        <button class="btn btn-outline-primary d-none" type="submit" id="search-btn">
+          <i class="fa fa-search"></i>
+        </button>
       </div>
-    </form>
+    </div>
+    <div id="search-dropdown" class="dropdown-menu m-0 position-absolute" style="display:none;margin-top:2.5rem!important;"></div>
+  </form>
   </div>
 </nav>
 
