--- a/resourcesTypes.html
+++ b/resourcesTypes.html
@@ -84,14 +84,17 @@
         <a class="nav-link" href="#">מפת אתר</a>
       </li>
    </ul>
-    <form class="form-inline mb-2 mb-md-0 d-flex">
-      <input class="form-control mr-2" type="search" placeholder="חיפוש נושא" aria-label="Search" id="search-box">
-      <button class="btn btn-outline-primary" type="submit" id="search-btn">
-        <i class="fa fa-search"></i>
-      </button>
-      <div id="search-dropdown" class="dropdown-menu m-0 position-absolute" style="display:none;margin-top:2.5rem!important;">
+   <form class="form-inline mb-2 mb-md-0 d-flex">
+    <div class="input-group">
+      <input class="form-control mr-2" type="search" placeholder="הקלידו נושא לחיפוש..." aria-label="Search" id="search-box">
+      <div class="input-group-append">
+        <button class="btn btn-outline-primary d-none" type="submit" id="search-btn">
+          <i class="fa fa-search"></i>
+        </button>
       </div>
-    </form>
+    </div>
+    <div id="search-dropdown" class="dropdown-menu m-0 position-absolute" style="display:none;margin-top:2.5rem!important;"></div>
+  </form>
   </div>
 </nav>
 
@@ -142,7 +145,7 @@
             <h5 class="card-title">מבנה המאמר האקדמי</h5>
             <p class="card-text"> הסבר על מאפייני המאמר האקדמי</p> 
           </div>
-          <div class="p-3">
+          <div class="p-3 d-none d-md-block">
             <span class="badge badge-pill badge-light w-auto">לומדה</span>
             <span class="badge badge-pill badge-light w-auto">3 דקות</span> 
           </div>
@@ -156,7 +159,7 @@
             <p class="card-text">הסבר על סוגי מקורות המידע השונים: ספרים, פרויקטי גמר, סוגי מאמרים, ספרים אלקטרוניים ועוד...</p>
            
           </div>
-          <div class="p-3">
+          <div class="p-3 d-none d-md-block">
             <span class="badge badge-pill badge-light w-auto">לומדה</span>
             <span class="badge badge-pill badge-light w-auto">3 דקות</span> 
           </div>
@@ -166,11 +169,11 @@
         <div class="card cardInnerPage">
           <img src="/images/Group 88.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column">
-            <h5 class="card-title">הערכת מידע האינטרנט</h5>
+            <h5 class="card-title">הערכת מידע באינטרנט</h5>
             <p class="card-text">אופן הערכת מידע באינטרנט ובדיקת אמינות המידע</p>
           
           </div>
-          <div class="p-3">
+          <div class="p-3 d-none d-md-block">
             <span class="badge badge-pill badge-light w-auto">לומדה</span>
             <span class="badge badge-pill badge-light w-auto">3 דקות</span> 
           </div>
