--- a/searchingArticles.html
+++ b/searchingArticles.html
@@ -83,14 +83,17 @@
         <a class="nav-link" href="sitemap.html">מפת אתר</a>
       </li>
    </ul>
-    <form class="form-inline mb-2 mb-md-0 d-flex">
-      <input class="form-control mr-2" type="search" placeholder="חיפוש נושא" aria-label="Search" id="search-box">
-      <button class="btn btn-outline-primary" type="submit" id="search-btn">
-        <i class="fa fa-search"></i>
-      </button>
-      <div id="search-dropdown" class="dropdown-menu m-0 position-absolute" style="display:none;margin-top:2.5rem!important;">
+   <form class="form-inline mb-2 mb-md-0 d-flex">
+    <div class="input-group">
+      <input class="form-control mr-2" type="search" placeholder="הקלידו נושא לחיפוש..." aria-label="Search" id="search-box">
+      <div class="input-group-append">
+        <button class="btn btn-outline-primary d-none" type="submit" id="search-btn">
+          <i class="fa fa-search"></i>
+        </button>
       </div>
-    </form>
+    </div>
+    <div id="search-dropdown" class="dropdown-menu m-0 position-absolute" style="display:none;margin-top:2.5rem!important;"></div>
+  </form>
   </div>
 </nav>
 
@@ -140,8 +143,8 @@
               הסבר על הגדרות נפוצות של חיפוש מתקדם לביצוע סינון יעיל 
               של תוצאות החיפוש במאגר המידע  </p>
        </div>
-          <div class="p-3">
-            <span class="badge badge-pill badge-light w-auto">סרטון</span>
+       <div class="p-3 d-none d-md-block">
+        <span class="badge badge-pill badge-light w-auto">סרטון</span>
             <span class="badge badge-pill badge-light w-auto"> 3 דקות</span> 
         </div>
       </div>
@@ -153,7 +156,7 @@
             <h5 class="card-title">אופרטורים בוליאניים</h5>
             <p class="card-text">הסבר על אופן השימוש באופרטורים AND, OR, NOT לייעול החיפוש </p>
           </div>
-          <div class="p-3">
+          <div class="p-3 d-none d-md-block">
             <span class="badge badge-pill badge-light w-auto">לומדה</span>
             <span class="badge badge-pill badge-light w-auto">  3 דקות</span> 
           </div>
@@ -165,8 +168,8 @@
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">חיפוש בשפה האנגלית</h5>
             <p class="card-text">שימוש נכון במילות מפתח בשפה האנגלית ובכלים טכנולוגיים המסייעים בהרחבת מילות החיפוש עתיד לקצר את תהליך החיפוש באופן משמעותי</div>
-          <div class="p-3">
-            <span class="badge badge-pill badge-light w-auto">לומדה</span>
+              <div class="p-3 d-none d-md-block">
+                <span class="badge badge-pill badge-light w-auto">לומדה</span>
             <span class="badge badge-pill badge-light w-auto">  3 דקות</span> 
           </div>
           </div>
