--- a/startpage.html
+++ b/startpage.html
@@ -84,14 +84,17 @@
         <a class="nav-link" href="sitemap.html">מפת אתר</a>
       </li>
    </ul>
-    <form class="form-inline mb-2 mb-md-0 d-flex">
-      <input class="form-control mr-2" type="search" placeholder="חיפוש נושא" aria-label="Search" id="search-box">
-      <button class="btn btn-outline-primary" type="submit" id="search-btn">
-        <i class="fa fa-search"></i>
-      </button>
-      <div id="search-dropdown" class="dropdown-menu m-0 position-absolute" style="display:none;margin-top:2.5rem!important;">
+   <form class="form-inline mb-2 mb-md-0 d-flex">
+    <div class="input-group">
+      <input class="form-control mr-2" type="search" placeholder="הקלידו נושא לחיפוש..." aria-label="Search" id="search-box">
+      <div class="input-group-append">
+        <button class="btn btn-outline-primary d-none" type="submit" id="search-btn">
+          <i class="fa fa-search"></i>
+        </button>
       </div>
-    </form>
+    </div>
+    <div id="search-dropdown" class="dropdown-menu m-0 position-absolute" style="display:none;margin-top:2.5rem!important;"></div>
+  </form>
   </div>
 </nav>
 
@@ -142,7 +145,7 @@
             <h5 class="card-title">אתר הספרייה</h5>
             <p class="card-text">היכרות בסיסית עם הפורטל והסבר על אופן ההתחברות מעמדת המידע</p>
           </div>
-          <div class="p-3">
+          <div class="p-3 d-none d-md-block">
             <span class="badge badge-pill badge-light w-auto">סרטון</span>
             <span class="badge badge-pill badge-light w-auto"> 
               3 דקות</span> 
@@ -155,8 +158,8 @@
           <div class="card-body d-flex flex-column" >
             <h5 class="card-title">קטלוג הספרייה</h5>
             <p class="card-text"> קטלוג הספרייה כולל הצגת אפשרויות חיפוש בקטלוג כמו: חיפוש ספרים, מאמרים ופרויקטי גמר</div>
-          <div class="p-3">
-            <span class="badge badge-pill badge-light w-auto">סרטון</span>
+              <div class="p-3 d-none d-md-block">
+                <span class="badge badge-pill badge-light w-auto">סרטון</span>
             <span class="badge badge-pill badge-light w-auto"> 
               3 דקות</span> 
           </div>
