--- a/testpage.html
+++ b/testpage.html
@@ -18,6 +18,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
+
     <!-- JS -->
     <script src="jScripts/bootstrap.bundle.min.js"></script>
     <script src="jScripts/javascript.js"></script>
@@ -84,14 +85,17 @@
         <a class="nav-link" href="sitemap.html">מפת אתר</a>
       </li>
    </ul>
-    <form class="form-inline mb-2 mb-md-0 d-flex">
-      <input class="form-control mr-2" type="search" placeholder="חיפוש נושא" aria-label="Search" id="search-box">
-      <button class="btn btn-outline-primary" type="submit" id="search-btn">
-        <i class="fa fa-search"></i>
-      </button>
-      <div id="search-dropdown" class="dropdown-menu m-0 position-absolute" style="display:none;margin-top:2.5rem!important;">
+   <form class="form-inline mb-2 mb-md-0 d-flex">
+    <div class="input-group">
+      <input class="form-control mr-2" type="search" placeholder="הקלידו נושא לחיפוש..." aria-label="Search" id="search-box">
+      <div class="input-group-append">
+        <button class="btn btn-outline-primary d-none" type="submit" id="search-btn">
+          <i class="fa fa-search"></i>
+        </button>
       </div>
-    </form>
+    </div>
+    <div id="search-dropdown" class="dropdown-menu m-0 position-absolute" style="display:none;margin-top:2.5rem!important;"></div>
+  </form>
   </div>
 </nav>
 
