--- a/resourcesTypes.html
+++ b/resourcesTypes.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="טכנולוגיות למידה, הדרכות " />
     <meta name="author" content="קורל ששון ודולב קליינר " />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image" href="/images/Logo 3.png">
+    <link rel="icon" type="image" href="images/Logo 3.png">
 
 
     <!-- CSS -->
@@ -140,7 +140,7 @@
     <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
       <div class="col pb-4">
         <div class="card cardInnerPage">
-          <img src="/images/Group 86.png" class="card-img-top" alt="..." style="padding: 10px;">
+          <img src="images/Group 86.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
             <h5 class="card-title">מבנה המאמר האקדמי</h5>
             <p class="card-text"> הסבר על מאפייני המאמר האקדמי</p> 
@@ -153,7 +153,7 @@
       </div>
       <div class="col pb-4">
         <div class="card cardInnerPage">
-          <img src="/images/Group 87.png" class="card-img-top" alt="..." style="padding: 10px;">
+          <img src="images/Group 87.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
             <h5 class="card-title">סוגי מקורות מידע</h5>
             <p class="card-text">הסבר על סוגי מקורות המידע השונים: ספרים, פרויקטי גמר, סוגי מאמרים, ספרים אלקטרוניים ועוד...</p>
@@ -167,7 +167,7 @@
       </div>
       <div class="col pb-4">
         <div class="card cardInnerPage">
-          <img src="/images/Group 88.png" class="card-img-top" alt="..." style="padding: 10px;">
+          <img src="images/Group 88.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">הערכת מידע באינטרנט</h5>
             <p class="card-text">אופן הערכת מידע באינטרנט ובדיקת אמינות המידע</p>
