--- a/searchingArticles.html
+++ b/searchingArticles.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="טכנולוגיות למידה, הדרכות " />
     <meta name="author" content="קורל ששון ודולב קליינר " />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image" href="/images/Logo 3.png">
+    <link rel="icon" type="image" href="images/Logo 3.png">
 
 
     <!-- CSS -->
@@ -136,7 +136,7 @@
       <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
         <div class="col pb-4">
         <div class="card cardInnerPage">
-          <img src="/images/Group 92.png" class="card-img-top" alt="..." style="padding: 10px;">
+          <img src="images/Group 92.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">חיפוש מתקדם במאגרי מידע</h5>
             <p class="card-text">
@@ -151,7 +151,7 @@
       </div>
       <div class="col pb-4">
         <div class="card cardInnerPage"  id="tobooleanRise">
-          <img src="/images/Group 93.png" class="card-img-top" alt="..." style="padding: 10px;">
+          <img src="images/Group 93.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
             <h5 class="card-title">אופרטורים בוליאניים</h5>
             <p class="card-text">הסבר על אופן השימוש באופרטורים AND, OR, NOT לייעול החיפוש </p>
@@ -164,7 +164,7 @@
       </div>
       <div class="col pb-4">
         <div class="card cardInnerPage"  id="toEnglishSearchRise">
-          <img src="/images/Group 95.png" class="card-img-top" alt="..." style="padding: 10px;">
+          <img src="images/Group 95.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">חיפוש בשפה האנגלית</h5>
             <p class="card-text">שימוש נכון במילות מפתח בשפה האנגלית ובכלים טכנולוגיים המסייעים בהרחבת מילות החיפוש עתיד לקצר את תהליך החיפוש באופן משמעותי</div>
