--- a/bibList.html
+++ b/bibList.html
@@ -9,7 +9,7 @@
     <meta name="author" content="קורל ששון ודולב קליינר " />
     <meta name="viewport" content="width=device-width, initial-scale=1">
  <!--לוגו עמוד-->
- <link rel="icon" type="image/png" href="/images/Logo 3.png">
+ <link rel="icon" type="image/png" href="images/Logo 3.png">
 
     <!-- CSS -->
     <link href="styles/bootstrap.rtl.min.css" rel="stylesheet" />
@@ -140,7 +140,7 @@
     <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
       <div class="col pb-4">
         <div class="card cardInnerPage">
-          <img src="/images/Group 99.png" class="card-img-top" alt="..." style="padding: 10px;">
+          <img src="images/Group 99.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
             <h5 class="card-title">כללי ציטוט</h5>
             <p class="card-text">הרחבה על כתיבת כללי ציטוט ברשימה הביבליוגרפית</p>
@@ -154,7 +154,7 @@
       </div>
       <div class="col pb-4">
         <div class="card cardInnerPage">
-          <img src="/images/Group 100.png" class="card-img-top" alt="..." style="padding: 10px;">
+          <img src="images/Group 100.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
             <h5 class="card-title">שימוש בכלים טכנולוגיים</h5>
             <p class="card-text">יצירת רשימה ביביליוגרפית בקלות וביעילות באמצעות כלים טכנולוגיים יעודיים</p>
