--- a/dataBases.html
+++ b/dataBases.html
@@ -9,7 +9,7 @@
     <meta name="author" content="קורל ששון ודולב קליינר " />
     <meta name="viewport" content="width=device-width, initial-scale=1">
  <!--לוגו עמוד-->
- <link rel="icon" type="image/png" href="/images/Logo 3.png">
+ <link rel="icon" type="image/png" href="images/Logo 3.png">
 
     <!-- CSS -->
     <link href="styles/bootstrap.rtl.min.css" rel="stylesheet" />
@@ -142,7 +142,7 @@
     <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
       <div class="col pb-4">
         <div class="card cardInnerPage">
-          <img src="/images/Group 89.png" class="card-img-top" alt="..." style="padding: 10px;">
+          <img src="images/Group 89.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
             <h5 class="card-title">מהו מאגר מידע?</h5>
             <p class="card-text">הסבר על מאגרי מידע, המאפיינים העיקריים של המאגרים ואופן הגישה אליהם</p>
@@ -156,7 +156,7 @@
       </div>
       <div class="col pb-4">
         <div class="card cardInnerPage">
-          <img src="/images/Group 91.png"src="/images/20230209_100856.jpg" class="card-img-top" alt="..." style="padding: 10px;">
+          <img src="images/Group 91.png"src="images/20230209_100856.jpg" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
             <h5 class="card-title">הבדלים בין מאגרי מידע</h5>
             <p class="card-text">הסבר על ההבדלים הבולטים בין המאגרים השונים כולל יתרונות וחסרונות של כל מאגר מידע</p>
