--- a/startpage.html
+++ b/startpage.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="טכנולוגיות למידה, הדרכות " />
     <meta name="author" content="קורל ששון ודולב קליינר " />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image" href="/images/Logo 3.png">
+    <link rel="icon" type="image" href="images/Logo 3.png">
 
 
     <!-- CSS -->
@@ -140,7 +140,7 @@
     <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
       <div class="col pb-4">
         <div class="card cardInnerPage">
-          <img src="/images/Group 84.png" class="card-img-top" alt="..." style="padding: 10px;">
+          <img src="images/Group 84.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
             <h5 class="card-title">אתר הספרייה</h5>
             <p class="card-text">היכרות בסיסית עם הפורטל והסבר על אופן ההתחברות מעמדת המידע</p>
@@ -154,7 +154,7 @@
       </div>
       <div class="col pb-4">
         <div class="card cardInnerPage">
-          <img src="/images/Group 85.png" class="card-img-top" alt="..." style="padding: 10px;">
+          <img src="images/Group 85.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
             <h5 class="card-title">קטלוג הספרייה</h5>
             <p class="card-text"> קטלוג הספרייה כולל הצגת אפשרויות חיפוש בקטלוג כמו: חיפוש ספרים, מאמרים ופרויקטי גמר</div>
