--- a/faqPage.html
+++ b/faqPage.html
@@ -142,7 +142,10 @@
           </button>
         </h2>
         <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+          <div class="accordion-body"><b>תשובה:</b> כדי לחפש מאמרים באופן ממוקד תוך חיסכון משמעותי בזמן חשוב להיעזר בשלושה מרכיבים עיקריים של המאמר האקדמי: כותרת המאמר, תקציר המאמר ומילות המפתח המופיעות בסוף התקציר.
+אם שלושת החלקים האלו מתייחסים לנושא עליו אתם חוקרים - תוכלו לקבוע בקלות אם מדובר במאמר הרלוונטי לעבודתכם האקדמית. כדי ללמוד עוד על מבנה המאמר האקדמי <a href=””>לחצו כאן</a>.<br><br>
+בנוסף, כדי למקד את תהליך החיפוש מומלץ להשתמש בפונקציונליות של חיפוש מתקדם במאגרי המידע. רוצים ללמוד איך לבצע חיפוש מתקדם במאגר מידע? <a href="">צפו בסרטון</a>.
+<br><br>יחידות לימוד נוספות שיכולות לסייע לכם לבצע חיפוש יעיל: <a href="">שימוש בלוגיקה בוליאנית</a>, <a href=""> חיפוש יעיל בשפה האנגלית</a>.</div>
         </div>
       </div>
       <div class="accordion-item">
