--- a/faqPage.html
+++ b/faqPage.html
@@ -155,7 +155,9 @@
           </button>
         </h2>
         <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+          <div class="accordion-body"><b>תשובה: </b>כאשר מתחברים למאגר מידע כסטודנט של מוסד לימודים מוכר מתאפשרת גישה חינמית למקורות המידע המופיעים במאגרים השונים. <br><br>
+            כדי ללמוד על אופן ההתחברות כסטודנט בHIT יש להיכנס ליחידת לימוד <a href="">מהו מאגר מידע</a> ולצפות בסרטון המסביר על פעולה זו.
+          </div>
         </div>
       </div>
       <div class="accordion-item">
@@ -165,7 +167,8 @@
           </button>
         </h2>
         <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+          <div class="accordion-body"><b>תשובה:</b> בכל מאגר מידע ניתן למצוא מקורות מידע רלוונטיים בהתאם לתחומי הדעת בו הוא עוסק.<br><br>
+            קראו בהרחבה על נושא זה ביחידת הלימוד <a href=""> הבדלים בין מאגרי מידע</a>, שם ישנה חלוקה של מאגרי מידע לפי פקולטות במכון הטכנולוגי HIT.</div>
         </div>
       </div>
       <div class="accordion-item">
@@ -175,7 +178,8 @@
           </button>
         </h2>
         <div id="flush-collapse4" class="accordion-collapse collapse" aria-labelledby="flush-heading4" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+          <div class="accordion-body"><b>תשובה:</b> בזכות שימוש נכון בכלים טכנולוגיים ניתן לקצר את תהליך יצירת הרשימה הביבליוגרפית וליצור אותה ביעילות תוך חיסכון זמן משמעותי. צפו  <a href=""> ,בסרטון </a>כדי ללמוד איך ליצור רשימת מקורות באמצעות התוכנה MyBib.
+          </div>
         </div>
       </div>
       <div class="accordion-item">
@@ -185,24 +189,30 @@
           </button>
         </h2>
         <div id="flush-collapse5" class="accordion-collapse collapse" aria-labelledby="flush-heading5" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+          <div class="accordion-body">ספריית HIT רוכשת בכל שנה מנוי למגוון מאגרי מידע המאפשר גישה חינמית למקורות המידע המופיעים במאגרים השונים. במידה ונתקלתם במאמר בתשלום ואתם סבורים שהוא רלוונטי לעבודתכם האקדמית, מומלץ לפנות לצוות הספרייה כדי לברר את הנושא.<br>
+            טלפון: 03-5026547 | מייל: ester@hit.ac.il</div>
         </div>
       </div>
       <div class="accordion-item">
         <h2 class="accordion-header" id="flush-heading6">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse6" aria-expanded="false" aria-controls="flush-collapseThree">
-            איך יודעים שהמאמר שמצאתי הוא אקדמי / עבר ביקורת עמיתים?
+            איך יודעים שהמאמר שמצאתי עבר ביקורת עמיתים?
           </button>
         </h2>
         <div id="flush-collapse6" class="accordion-collapse collapse" aria-labelledby="flush-heading6" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+          <div class="accordion-body">בעמוד הראשון של מאמר שעבר תהליך של ביקורת עמיתים יופיעו פרטי התהליך.
+           <br>
+            בתמונה המצורפת ניתן לראות המאמר התקבל במערכות בנובמבר 2011 ונשלח באופן אנונימי לביקורת למספר מומחים בתחום. המאמר התקבל בחזרה בספטמבר 2012, והתקבל לפרסום במאי 2013.<br><br><br>
+            <div class="img">
+              <img src="images/image005.png" class="img-fluid">
+            </div><br>
+            קראו בהרחבה על נושא ביקורת עמיתים ביחידת הלימוד  <a href="">הערכת מידע באינטרנט.</a>
+          </div>
         </div>
       </div>
     </div>
   </div>
    </main>
-
-
   
 
 <footer class="footer rtl-footer-bg py-3 d-flex">
