--- a/testpage.html
+++ b/testpage.html
@@ -109,7 +109,38 @@
 </main>
 
   
+<footer class="footer rtl-footer-bg py-3 d-flex">
+  <div class="container">
+    <div class="footerText d-flex flex-column flex-md-row justify-content-md-between">
+      <a class="text-black text-center" href="about.html">אודות</a>
+      <div class="col-md-1 text-center"  style="width:max-content">
+        <a class="text-black">תכנים</a>
+        <div class="text-lg-start">
+        <ul class="list-unstyled">
+          <li><a href="startpage.html">איך מתחילים?</a></li>
+          <li><a href="resourcesTypes.html">סוגי מקורות אקדמיים</a></li>
+          <li><a href="dataBases.html">מאגרי מידע</a></li>
+          <li><a href="searchingArticles.html">חיפוש מאמרים</a></li>
+          <li><a href="bibList.html">רשימה ביבליוגרפית</a></li>
+        </ul>
+      </div>
+      </div>
+      <a class="text-black text-center"  href="faqPage.html">שאלות נפוצות</a>
+      <a class="text-black text-center" href="sitemap.html">מפת אתר</a>
+      <div class="text-center mt-3">
+        <a class="text-black">צור קשר</a>
+        <p class="text-center">ניתן לפנות לצוות הספרייה במייל: Library@hit.ac.il</p>
+      </div>
+      <div class="mobileFooter text-center mt-3">
+        <p>האתר פותח במסגרת פרויקט גמר במכון הטכנולוגי בחולון
+          הפקולטה לטכנולוגיות למידה, תואר ראשון</p>
+        <a href="https://www.hit.ac.il/"><img src="images/HITlogo.png" alt="HIT Logo"></a>
+        <p>&copy; כל הזכויות שמורות למכון הטכנולוגי HIT</p>
 
+      </div>
+    </div>
+  </div>
+</footer>
 </body>
 
 </html>
