--- a/faqPage.html
+++ b/faqPage.html
@@ -178,7 +178,7 @@
           </button>
         </h2>
         <div id="flush-collapse4" class="accordion-collapse collapse" aria-labelledby="flush-heading4" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body"><b>תשובה:</b> בזכות שימוש נכון בכלים טכנולוגיים ניתן לקצר את תהליך יצירת הרשימה הביבליוגרפית וליצור אותה ביעילות תוך חיסכון זמן משמעותי. צפו  <a href=""> ,בסרטון </a>כדי ללמוד איך ליצור רשימת מקורות באמצעות התוכנה MyBib.
+          <div class="accordion-body"><b>תשובה:</b> בזכות שימוש נכון בכלים טכנולוגיים ניתן לקצר את תהליך יצירת הרשימה הביבליוגרפית וליצור אותה ביעילות תוך חיסכון זמן משמעותי. <br>צפו  <a href="">בסרטון</a> כדי ללמוד איך ליצור רשימת מקורות באמצעות התוכנה MyBib.
           </div>
         </div>
       </div>
