--- a/faqPage.html
+++ b/faqPage.html
@@ -189,7 +189,7 @@
           </button>
         </h2>
         <div id="flush-collapse5" class="accordion-collapse collapse" aria-labelledby="flush-heading5" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body">ספריית HIT רוכשת בכל שנה מנוי למגוון מאגרי מידע המאפשר גישה חינמית למקורות המידע המופיעים במאגרים השונים. במידה ונתקלתם במאמר בתשלום ואתם סבורים שהוא רלוונטי לעבודתכם האקדמית, מומלץ לפנות לצוות הספרייה כדי לברר את הנושא.<br>
+          <div class="accordion-body"><b>תשובה:</b> ספריית HIT רוכשת בכל שנה מנוי למגוון מאגרי מידע המאפשר גישה חינמית למקורות המידע המופיעים במאגרים השונים. במידה ונתקלתם במאמר בתשלום ואתם סבורים שהוא רלוונטי לעבודתכם האקדמית, מומלץ לפנות לצוות הספרייה כדי לברר את הנושא.<br>
             טלפון: 03-5026547 | מייל: ester@hit.ac.il</div>
         </div>
       </div>
@@ -200,7 +200,7 @@
           </button>
         </h2>
         <div id="flush-collapse6" class="accordion-collapse collapse" aria-labelledby="flush-heading6" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body">בעמוד הראשון של מאמר שעבר תהליך של ביקורת עמיתים יופיעו פרטי התהליך.
+          <div class="accordion-body"><b>תשובה:</b> בעמוד הראשון של מאמר שעבר תהליך של ביקורת עמיתים יופיעו פרטי התהליך.
            <br>
             בתמונה המצורפת ניתן לראות המאמר התקבל במערכות בנובמבר 2011 ונשלח באופן אנונימי לביקורת למספר מומחים בתחום. המאמר התקבל בחזרה בספטמבר 2012, והתקבל לפרסום במאי 2013.<br><br><br>
             <div class="img">
