footer anf more

--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@
       <div class="col-md-1 text-center"  style="width:max-content">
         <a class="text-black">תכנים</a>
         <div class="text-lg-start">
-        <ul class="list-unstyled">
+        <ul class="list-unstyled mt-2">
           <li><a href="startpage.html">איך מתחילים?</a></li>
           <li><a href="resourcesTypes.html">סוגי מקורות אקדמיים</a></li>
           <li><a href="dataBases.html">מאגרי מידע</a></li>
@@ -153,12 +153,12 @@
       </div>
       <a class="text-black text-center"  href="faqPage.html">שאלות נפוצות</a>
       <a class="text-black text-center" href="sitemap.html">מפת אתר</a>
-      <div class="text-center mt-3">
+      <div>
         <a class="text-black">צור קשר</a>
-        <p class="text-center">ניתן לפנות לצוות הספרייה במייל: Library@hit.ac.il</p>
+        <p class="text-center contact-descreption mt-2">ניתן לפנות לצוות הספרייה במייל: <br>Library@hit.ac.il</p>
       </div>
-      <div class="mobileFooter text-center mt-3">
-        <p>האתר פותח במסגרת פרויקט גמר במכון הטכנולוגי בחולון
+      <div class="mobileFooter text-center" style="font-style: italic; line-height: 1.8em;">
+        <p>האתר פותח במסגרת פרויקט גמר במכון הטכנולוגי בחולון<br>
           הפקולטה לטכנולוגיות למידה, תואר ראשון</p>
         <a href="https://www.hit.ac.il/"><img src="images/HITlogo.png" alt="HIT Logo"></a>
         <p>&copy; כל הזכויות שמורות למכון הטכנולוגי HIT</p>
