--- a/boolean/booleanRise.html
+++ b/boolean/booleanRise.html
@@ -70,13 +70,21 @@
         .brand--min768--background { background-color: #fff !important; }
         .brand--min768--border     { border-color: #fff !important; }
         .brand--min768--color      { color: #fff !important; }
+        .quiz-match {direction: ltr; }
       }
 
       @media (max-width: 47.9375em) { /* 768px */
         .brand--max768--background { background-color: #fff !important; }
         .brand--max768--border     { border-color: #fff !important; }
         .brand--max768--color      { color: #fff !important; }
+        .quiz-match {direction: ltr; }
       }
+
+      @media (min-width: 33.75em){
+        .quiz-match {direction: ltr; }
+   }
+  
+
     </style>
     <div id="app"></div>
     <script type="text/javascript">
