--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
       <div class="container my-5 px-lg-5">
         <div class="row g-5 py-lg-5">
           <div class="col-lg-6 text-sm-start text-lg-start" style="color: #301a4b;">
-            <h1 class="mb-4 pt-4">כיף שהצטרפתם!</h1>
-            <h5>ברוכים הבאים לאתר הלימודי<br>של ספריית המכון הטכנולוגי HIT</h5>
+            <h1>כיף שהצטרפתם!</h1>
+            <h5 class="pt-4">ברוכים הבאים לאתר הלימודי<br>של ספריית המכון הטכנולוגי HIT</h5>
           </div>
           <div class="col-lg-4 d-flex justify-content-end ">
             <img class="img-fluid d-none d-lg-block float-start ml-lg-0" src="images/MainpageImage.png" alt="books">
@@ -123,7 +123,7 @@
 </header>
 
   <main>
-    <div class="container">
+    <div class="container the-index-page-cards-container">
       <h5 class="mt-2 pb-4 pr-3" style="color: #301a4b; margin-right: 20px;">איזה נושא תרצו ללמוד היום?</h5>
       <div class="row">
     <div class="col-sm-4 pb-4">
@@ -206,7 +206,7 @@
       <div class="col-md-1 text-center"  style="width:max-content">
         <a class="text-black">תכנים</a>
         <div class="text-lg-start">
-        <ul class="list-unstyled">
+        <ul class="list-unstyled mt-2">
           <li><a href="startpage.html">איך מתחילים?</a></li>
           <li><a href="resourcesTypes.html">סוגי מקורות אקדמיים</a></li>
           <li><a href="dataBases.html">מאגרי מידע</a></li>
@@ -217,12 +217,12 @@
       </div>
       <a class="text-black text-center"  href="faqPage.html">שאלות נפוצות</a>
       <a class="text-black text-center" href="sitemap.html">מפת אתר</a>
-      <div class="text-center mt-3">
+      <div>
         <a class="text-black">צור קשר</a>
-        <p class="text-center">ניתן לפנות לצוות הספרייה במייל: Library@hit.ac.il</p>
+        <p class="text-center contact-descreption mt-2">ניתן לפנות לצוות הספרייה במייל: <br>Library@hit.ac.il</p>
       </div>
-      <div class="mobileFooter text-center mt-3">
-        <p>האתר פותח במסגרת פרויקט גמר במכון הטכנולוגי בחולון
+      <div class="mobileFooter text-center" style="font-style: italic; line-height: 1.8em;">
+        <p>האתר פותח במסגרת פרויקט גמר במכון הטכנולוגי בחולון<br>
           הפקולטה לטכנולוגיות למידה, תואר ראשון</p>
         <a href="https://www.hit.ac.il/"><img src="images/HITlogo.png" alt="HIT Logo"></a>
         <p>&copy; כל הזכויות שמורות למכון הטכנולוגי HIT</p>
