--- a/startpage.html
+++ b/startpage.html
@@ -140,9 +140,9 @@
     <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
       <div class="col pb-4">
         <div class="card cardInnerPage">
-          <img src="images/Group 84.png" class="card-img-top" alt="..." style="padding: 10px;">
+       <img src="images/Group 84.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
-            <h5 class="card-title">אתר הספרייה</h5>
+            <h6 class="card-title">אתר הספרייה</h5>
             <p class="card-text">היכרות בסיסית עם הפורטל והסבר על אופן ההתחברות מעמדת המידע</p>
           </div>
           <div class="p-3 d-none d-md-block">
@@ -156,9 +156,9 @@
         <div class="card cardInnerPage">
           <img src="images/Group 85.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
-            <h5 class="card-title">קטלוג הספרייה</h5>
+            <h6 class="card-title">קטלוג הספרייה</h5>
             <p class="card-text"> קטלוג הספרייה כולל הצגת אפשרויות חיפוש בקטלוג כמו: חיפוש ספרים, מאמרים ופרויקטי גמר</div>
-              <div class="p-3 d-none d-md-block">
+              <div class="p-3 d-none d-md-block ">
                 <span class="badge badge-pill badge-light w-auto">סרטון</span>
             <span class="badge badge-pill badge-light w-auto"> 
               3 דקות</span> 
@@ -172,7 +172,6 @@
 
   
 
-
 <footer class="footer rtl-footer-bg py-3 d-flex">
   <div class="container">
     <div class="footerText d-flex flex-column flex-md-row justify-content-md-between">
@@ -180,7 +179,7 @@
       <div class="col-md-1 text-center"  style="width:max-content">
         <a class="text-black">תכנים</a>
         <div class="text-lg-start">
-        <ul class="list-unstyled">
+        <ul class="list-unstyled mt-2">
           <li><a href="startpage.html">איך מתחילים?</a></li>
           <li><a href="resourcesTypes.html">סוגי מקורות אקדמיים</a></li>
           <li><a href="dataBases.html">מאגרי מידע</a></li>
@@ -191,12 +190,12 @@
       </div>
       <a class="text-black text-center"  href="faqPage.html">שאלות נפוצות</a>
       <a class="text-black text-center" href="sitemap.html">מפת אתר</a>
-      <div class="text-center mt-3">
+      <div>
         <a class="text-black">צור קשר</a>
-        <p class="text-center">ניתן לפנות לצוות הספרייה במייל: Library@hit.ac.il</p>
+        <p class="text-center contact-descreption mt-2">ניתן לפנות לצוות הספרייה במייל: <br>Library@hit.ac.il</p>
       </div>
-      <div class="mobileFooter text-center mt-3">
-        <p>האתר פותח במסגרת פרויקט גמר במכון הטכנולוגי בחולון
+      <div class="mobileFooter text-center" style="font-style: italic; line-height: 1.8em;">
+        <p>האתר פותח במסגרת פרויקט גמר במכון הטכנולוגי בחולון<br>
           הפקולטה לטכנולוגיות למידה, תואר ראשון</p>
         <a href="https://www.hit.ac.il/"><img src="images/HITlogo.png" alt="HIT Logo"></a>
         <p>&copy; כל הזכויות שמורות למכון הטכנולוגי HIT</p>
