--- a/about.html
+++ b/about.html
@@ -117,10 +117,10 @@
          </nav> 
         </div>
           <!--סוף פירורי לחם-->
-     <div class="container my-lg-5 py-5 px-lg-5">
+     <div class="container py-5 px-lg-5">
           <div class="row g-5 py-lg-5">
             <div class="container">  
-              <div class="section-title position-relative text-start mb-5 pb-2">
+              <div class="section-title position-relative text-start ">
                 <h2 >אודות</h2>                
             </div>
           </div>
@@ -131,7 +131,16 @@
      </div>
      </header>      
    <main>
-      
+      <div class="container">
+        <div class="text-lg-center text-sm-start">
+          אתר זה מיועד עבור סטודנטים הלומדים במכון הטכנולוגי בחולון HIT.<br>
+          באתר ניתן למצוא מגוון יחידות לימוד דיגיטליות וחוויותיות להיכרות בסיסית עם נושא האוריינות האקדמית <br>
+          כגון: לומדות, סרטונים ועזרי למידה שימושיים.
+        </div>
+        <div class="text-start mt-5">
+        <h4>הכירו את צוות הספרייה</h4>
+      </div>
+      </div>
 </main>
 
   
